--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -442,6 +442,22 @@
   number = {6}
 }
 
+@article{barnardSeasonalVariationCanopy2016a,
+  title = {Seasonal {{Variation}} in {{Canopy Aerodynamics}} and the {{Sensitivity}} of {{Transpiration Estimates}} to {{Wind Velocity}} in {{Broadleaved Deciduous Species}}},
+  author = {Barnard, D. M. and Bauerle, W. L.},
+  date = {2016},
+  journaltitle = {Journal of Hydrometeorology},
+  volume = {17},
+  pages = {3029--3043},
+  publisher = {{American Meteorological Society}},
+  issn = {1525-755X},
+  abstract = {ABSTRACT Characterization of seasonal dynamics in wind speed attenuation within a plant canopy α is necessary for modeling leaf boundary layer conductance gbV, canopy–atmosphere coupling Ω, and transpiration at multiple scales. The goals of this study were to characterize seasonal variation in α in four tree species with canopy wind profiles and a canopy-structure model, to quantify the impact of α on estimates of gbV and Ω, and to determine the influence of variable wind speed on transpiration estimates from a biophysical model [Multi-Array Evaporation Stand Tree Radiation Assemblage (MAESTRA)]. Among species, α varied significantly with above-canopy wind speed and seasonal canopy development. At the mean above-canopy wind speed (1.5ms–1), α could be predicted using a linear model with leaf area index as the input variable (coefficient of determination R² = 0.78). However, the canopy-structure model yielded improved predictions (R² = 0.92) by including canopy height and leaf width. By midseason, increasing canopy leaf area and α resulted in lower within-canopy wind speeds, a decrease in gbV by 20\%–50\%, and a peak in Ω. Testing a discrete increase in wind speed (0.6–2.4ms–1; seasonal mean plus/minus one standard deviation) had variable influence on transpiration estimates (from –30\% to +20\%), which correlated strongly with vapor pressure deficit (R² = 0.83). Given the importance of α in accurate representation of gbV , Ω, and transpiration, it is concluded that α needs to be given special attention in plant canopies that undergo substantial seasonal changes, especially densely foliated canopies (i.e., leaf area index {$>$}1) and in areas with lower native wind speeds (i.e., {$<$}2ms–1).},
+  eprint = {26152584},
+  eprinttype = {jstor},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\KNG388GI\\Barnard and Bauerle - 2016 - Seasonal Variation in Canopy Aerodynamics and the .pdf},
+  number = {12}
+}
+
 @article{bartemucciOverstoryInfluencesLight2006,
   title = {Overstory Influences on Light Attenuation Patterns and Understory Plant Community Diversity and Composition in Southern Boreal Forests of {{Quebec}}},
   author = {Bartemucci, Paula and Messier, Christian and Canham, Charles D},
@@ -2131,6 +2147,18 @@
   urldate = {2021-04-04}
 }
 
+@online{ForestMicroclimatesClimatea,
+  title = {Forest Microclimates and Climate Change: {{Importance}}, Drivers and Future Research Agenda - {{De Frenne}} - 2021 - {{Global Change Biology}} - {{Wiley Online Library}}},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.15569},
+  urldate = {2021-07-07}
+}
+
+@online{ForestMicroclimatesClimateb,
+  title = {Forest Microclimates and Climate Change: {{Importance}}, Drivers and Future Research Agenda - {{De Frenne}} - 2021 - {{Global Change Biology}} - {{Wiley Online Library}}},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.15569},
+  urldate = {2021-07-07}
+}
+
 @article{franklinShadeAvoidance2008,
   title = {Shade Avoidance},
   author = {Franklin, Keara A.},
@@ -2148,6 +2176,26 @@
   keywords = {DELLA,phytochrome,PIF (PHYTOCHROME INTERACTING FACTOR),red to far-red ratio (R : FR),shade avoidance},
   langid = {english},
   number = {4}
+}
+
+@article{frenneForestMicroclimatesClimate2021,
+  title = {Forest Microclimates and Climate Change: {{Importance}}, Drivers and Future Research Agenda},
+  shorttitle = {Forest Microclimates and Climate Change},
+  author = {Frenne, Pieter De and Lenoir, Jonathan and Luoto, Miska and Scheffers, Brett R. and Zellweger, Florian and Aalto, Juha and Ashcroft, Michael B. and Christiansen, Ditte M. and Decocq, Guillaume and Pauw, Karen De and Govaert, Sanne and Greiser, Caroline and Gril, Eva and Hampe, Arndt and Jucker, Tommaso and Klinges, David H. and Koelemeijer, Irena A. and Lembrechts, Jonas J. and Marrec, Ronan and Meeussen, Camille and Ogée, Jérôme and Tyystjärvi, Vilna and Vangansbeke, Pieter and Hylander, Kristoffer},
+  date = {2021},
+  journaltitle = {Global Change Biology},
+  volume = {27},
+  pages = {2279--2297},
+  issn = {1365-2486},
+  doi = {10.1111/gcb.15569},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.15569},
+  urldate = {2021-07-07},
+  abstract = {Forest microclimates contrast strongly with the climate outside forests. To fully understand and better predict how forests' biodiversity and functions relate to climate and climate change, microclimates need to be integrated into ecological research. Despite the potentially broad impact of microclimates on the response of forest ecosystems to global change, our understanding of how microclimates within and below tree canopies modulate biotic responses to global change at the species, community and ecosystem level is still limited. Here, we review how spatial and temporal variation in forest microclimates result from an interplay of forest features, local water balance, topography and landscape composition. We first stress and exemplify the importance of considering forest microclimates to understand variation in biodiversity and ecosystem functions across forest landscapes. Next, we explain how macroclimate warming (of the free atmosphere) can affect microclimates, and vice versa, via interactions with land-use changes across different biomes. Finally, we perform a priority ranking of future research avenues at the interface of microclimate ecology and global change biology, with a specific focus on three key themes: (1) disentangling the abiotic and biotic drivers and feedbacks of forest microclimates; (2) global and regional mapping and predictions of forest microclimates; and (3) the impacts of microclimate on forest biodiversity and ecosystem functioning in the face of climate change. The availability of microclimatic data will significantly increase in the coming decades, characterizing climate variability at unprecedented spatial and temporal scales relevant to biological processes in forests. This will revolutionize our understanding of the dynamics, drivers and implications of forest microclimates on biodiversity and ecological functions, and the impacts of global changes. In order to support the sustainable use of forests and to secure their biodiversity and ecosystem services for future generations, microclimates cannot be ignored.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/gcb.15569},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\EW35IPFP\\Frenne et al. - 2021 - Forest microclimates and climate change Importanc.pdf;C\:\\Users\\Me\\Zotero\\storage\\WNT7CS9D\\gcb.html},
+  keywords = {biodiversity,buffering,climate change,ecosystem function,forest,future research,microclimate,offset},
+  langid = {english},
+  number = {11}
 }
 
 @article{gebauerEffectsMildDrought2019,
@@ -6483,6 +6531,19 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\DVI3HWHK\\Rambo and North - 2009 - Canopy microclimate response to pattern and densit.pdf},
   langid = {english},
   number = {2}
+}
+
+@article{raupachCoherentEddiesTurbulence1996,
+  title = {Coherent Eddies and Turbulence in Vegetation Canopies: {{The}} Mixing-Layer Analogy},
+  shorttitle = {Coherent Eddies and Turbulence in Vegetation Canopies},
+  author = {Raupach, Michael and Finnigan, John and Brunet, Y.},
+  date = {1996-01-03},
+  journaltitle = {Boundary-Layer Meteorology},
+  volume = {78},
+  pages = {351--382},
+  doi = {10.1007/BF00120941},
+  abstract = {This paper argues that the active turbulence and coherent motions near the top of a vegetation canopy are patterned on a plane mixing layer, because of instabilities associated with the characteristic strong inflection in the mean velocity profile. Mixing-layer turbulence, formed around the inflectional mean velocity profile which develops between two coflowing streams of different velocities, differs in several ways from turbulence in a surface layer. Through these differences, the mixing-layer analogy provides an explanation for many of the observed distinctive features of canopy turbulence. These include: (a) ratios between components of the Reynolds stress tensor; (b) the ratio K-H/K-M of the eddy diffusivities for heat and momentum; (c) the relative roles of ejections and sweeps; (d) the behaviour of the turbulent energy balance, particularly the major role of turbulent transport; and (e) the behaviour of the turbulent length scales of the active coherent motions (the dominant eddies responsible for vertical transfer near the top of the canopy). It is predicted that these length scales are controlled by the shear length scale L(s)=U(h)/U'(h) (where h is canopy height, U(z) is mean velocity as a function of height z, and U'=dU/dz). In particular, the streamwise spacing of the dominant canopy eddies is Lambda(x)=mL(s), with m=8.1. These predictions are tested against many sets of field and wind-tunnel data. We propose a picture of canopy turbulence in which eddies associated with inflectional instabilities are modulated by larger-scale, inactive turbulence, which is quasi-horizontal on the scale of the canopy.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\NG4Z38PE\\Raupach et al. - 1996 - Coherent eddies and turbulence in vegetation canop.pdf}
 }
 
 @article{readComparativeResponsesTemperature1990,
