added citations, removed a few words

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -5330,6 +5330,24 @@
   number = {3}
 }
 
+@article{niinemetsLeafAgeDependent2016,
+  title = {Leaf Age Dependent Changes in Within-Canopy Variation in Leaf Functional Traits: {{A}} Meta-Analysis},
+  shorttitle = {Leaf Age Dependent Changes in Within-Canopy Variation in Leaf Functional Traits},
+  author = {Niinemets, Ülo},
+  date = {2016-05-01},
+  journaltitle = {J Plant Res},
+  volume = {129},
+  pages = {313--338},
+  issn = {1618-0860},
+  doi = {10.1007/s10265-016-0815-2},
+  url = {https://doi.org/10.1007/s10265-016-0815-2},
+  urldate = {2020-08-22},
+  abstract = {Within-canopy variation in leaf structural and photosynthetic characteristics is a major means by which whole canopy photosynthesis is maximized at given total canopy nitrogen. As key acclimatory modifications, leaf nitrogen content (NA) and photosynthetic capacity (AA) per unit area increase with increasing light availability in the canopy and these increases are associated with increases in leaf dry mass per unit area (MA) and/or nitrogen content per dry mass and/or allocation. However, leaf functional characteristics change with increasing leaf age during leaf development and aging, but the importance of these alterations for within-canopy trait gradients is unknown. I conducted a meta-analysis based on 71 canopies that were sampled at different time periods or, in evergreens, included measurements for different-aged leaves to understand how within-canopy variations in leaf traits (trait plasticity) depend on leaf age. The analysis demonstrated that in evergreen woody species, MA and NA plasticity decreased with increasing leaf age, but the change in AA plasticity was less suggesting a certain re-acclimation of AA to altered light. In deciduous woody species, MA and NA gradients in flush-type species increased during leaf development and were almost invariable through the rest of the season, while in continuously leaf-forming species, the trait gradients increased constantly with increasing leaf age. In forbs, NA plasticity increased, while in grasses, NA plasticity decreased with increasing leaf age, reflecting life form differences in age-dependent changes in light availability and in nitrogen resorption for growth of generative organs. Although more work is needed to improve the coverage of age-dependent plasticity changes in some plant life forms, I argue that the age-dependent variation in trait plasticity uncovered in this study is large enough to warrant incorporation in simulations of canopy photosynthesis through the growing period.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\MSBIDVW2\\Niinemets - 2016 - Leaf age dependent changes in within-canopy variat.pdf},
+  langid = {english},
+  number = {3}
+}
+
 @article{niinemetsLeafShapeVenation2007,
   title = {Leaf Shape and Venation Pattern Alter the Support Investments within Leaf Lamina in Temperate Species: A Neglected Source of Leaf Physiological Differentiation?},
   shorttitle = {Leaf Shape and Venation Pattern Alter the Support Investments within Leaf Lamina in Temperate Species},
