--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -109,8 +109,8 @@ In the meantime, our findings imply that while large canopy trees are the most v
 # Introduction
 
 **Forest responses and feedbacks to climate change will have a critical influence on the future of Earth's climate.**
-Globally, temperatures have risen $1.2^\circ$C since the 1850-1900 period [@rohdeBerkeleyEarthLand2020] and are expected to rise over pre-industrial levels $1.6 - 4.3^{\circ}C$ by 2100 (IPCC 2014), accompanied by increasing severity and frequency of heat waves [@meehlMoreIntenseMore2004] and hotter droughts [@trenberthGlobalWarmingChanges2014b].
-These changes are expected to have profound effects on tree metabolism and forest ecosystem function (@breshearsUnderappreciatedPlantVulnerabilities 2021; IPBES report), including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities 2021; @corlettImpactsWarmingTropical2011], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reduced growth and elevated mortality during drought [@teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities]. Collectively, these impacts may lead to reduced forest C sequestration, as may already be occurring in some forests [@oishiWarmerTemperaturesReduce2018; @sullivanLongtermThermalSensitivity2020]. The resulting feedbacks to the climate system, decreased C storage, and changes in albedo and hydrology will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016, Bonan 2008], yet this influence remains extremely uncertain [REFS].
+Globally, temperatures have risen $1.2^\circ$C since the 1850-1900 period [@rohdeBerkeleyEarthLand2020] and are expected to rise over pre-industrial levels of $1.6 - 4.3^{\circ}C$ by 2100 (IPCC 2014), accompanied by increasing severity and frequency of heat waves [@meehlMoreIntenseMore2004] and hotter droughts [@trenberthGlobalWarmingChanges2014b].
+These changes are expected to have profound effects on tree metabolism and forest ecosystem function (@breshearsUnderappreciatedPlantVulnerabilities 2021; IPBES report), including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities 2021; @corlettImpactsWarmingTropical2011], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reduced growth and elevated mortality during drought [@teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities]. Collectively, these impacts may lead to reduced forest C sequestration, as may already be occurring in some forests [@oishiWarmerTemperaturesReduce2018; @sullivanLongtermThermalSensitivity2020]. The resulting feedbacks to the climate system, decreased C storage, and changes in albedo and hydrology will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016], yet this influence remains extremely uncertain [REFS].
  
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by the more exposed canopy trees [@zellweger_seasonal_2019; @davisMicroclimaticBufferingForests2019].**
 Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. 
@@ -173,9 +173,9 @@ The $T_{air}$ gradient along canopies and understories varies with factors such 
 Typically, dense canopies buffer understories from maximum $T_{air}$ relatively more than open canopies -- *i.e.*, dense canopy understories can have cooler maximum daytime $T_{air}$ and warmer minimum $T_{air}$ during the night than open canopy understories or nearby clearings [@frenneForestMicroclimatesClimate2021; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davisMicroclimaticBufferingForests2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009]. 
 Notably, this pattern can be reversed in open canopy forests or sparse stands, where below-canopy maximum $T_{air}$ can be warmer than canopy $T_{air}$ due to turbulent air mixing and thermal radiative flux from the soil and the canopy that is intercepted by lower-canopy layers, analogous to 'canopy greenhouse effect' [e.g., OSBS, Figs. `r fig_NEON_vertical`g, `r SIfig_NEON_all`b, @banerjeeExplainingConvectorEffect2017; @curtis_intracanopy_2019;@zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987; @ramboCanopyMicroclimateResponse2009; @hardwickRelationshipLeafArea2015].    
 
-**The buffering patterns described above vary geographically, seasonally, and across forests types [Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`, *Defrenne et al. 2021*].**
-The strength of buffering increases with canopy density -- for example, across gradients of elevation [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a; @juckerCanopyStructureTopography2018], moisture [**REF**], and proximity to water, for example in riparian forests [@davisMicroclimaticBufferingForests2019; @macekMaximumAirTemperature2019]. (*Nidhi, please make sure the references are appropriate here-- I rearranged the sentence structure.*)
-Seasonally, canopy buffering capacity is greater in wet than dry seasons, presumably because leaf area is greater in wet seasons [@davisMicroclimaticBufferingForests2019; @rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a; **double check these refs--at least one didn't belong**].
+**The buffering patterns described above vary geographically, seasonally, and across forests types [Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`, @frenneForestMicroclimatesClimate2021].**
+The strength of buffering increases with canopy density -- for example, across gradients of elevation [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a; @juckerCanopyStructureTopography2018], moisture, and proximity to water, for example in riparian forests [@davisMicroclimaticBufferingForests2019; @macekMaximumAirTemperature2019].
+Seasonally, canopy buffering capacity is greater in wet than dry seasons, presumably because leaf area is greater in wet seasons [@davisMicroclimaticBufferingForests2019; @rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a].
 
 ## Leaf temperature 
 
@@ -234,7 +234,7 @@ Because sun leaves are exposed to higher irradiance and $VPD$, their $g_s$-limit
 **Following the principles outlined above, vertical microclimate profiles, leaf traits (see "Leaf Traits" section), and $g_s$ (see "Leaf metabolism and thermal responses" section) together explain in-situ $T_{leaf}$ observations (Figs. `r fig_NEON_vertical`-`r fig_leaf_T`).** 
 Often, $T_{leaf}$ tracks $T_{air}$, *in large part due to vertical gradients in leaf traits and $g_s$* / ~due to high evapotranspiration~, and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
 In closed-canopy forests, including tropical and temperate broadleaf forests, leaves experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies than buffered lower-canopies, sometimes exceeding optima for photosynthesis ($T_{opt}$) and $T_{air}$, because of $g_s$-limitation and high irradiance [@niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. 
-In contrast, in open forests with lower buffering capacity, lower-canopy $T_{leaf}$ can be greater than upper canopy $T_{leaf}$, due to greater light permeability, *vertical air mixing*, and still air in the lower canopy and heating from the ground [Figs. `r fig_NEON_vertical`h, `r SIfig_NEON_all`b,e, @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987;@rey-sanchez_spatial_2016]. 
+In contrast, in open forests with lower $LAI$, lower-canopy $T_{leaf}$ can be greater than upper canopy $T_{leaf}$, due to greater light permeability, *vertical air mixing*, and still air in the lower canopy and heating from the ground [Figs. `r fig_NEON_vertical`h, `r SIfig_NEON_all`b,e, @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987;@rey-sanchez_spatial_2016]. 
 Similarly, trees growing close to the ground can experience greater heat stress in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019]. 
 Greater $RH$ in closed-inner canopy can also increase $T_{leaf}$ relatively more than upper-canopy $T_{leaf}$ [@dietzVerticalPatternsDuration2007]. 
 
@@ -272,11 +272,11 @@ nocite: |
 
 #### Anatomical, Morphological and Physiological traits
 
-Sun leaves in the exposed canopy have traits that help avoid heat and water stress than shade leaves, for instance, by being smaller, hairier, with higher vein density [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006; @zwienieckiHydraulicLimitationsImposed200], and steeper leaf-angle [@niinemetsAdjustmentFoliageStructure1998, *REF*]. These traits [see Table 1] collectively aid heat dissapation and regulate $T_{leaf}$-photosynthetic balance. Whereas, shade leaves have traits that maximize light capture in the diffused-light environment with sunflecks, for example lower LMA, but are more likely to get overheated than sun leaves due to greater thermal capacitance [@mathurPhotosyntheticEfficiencySun2018a; @leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. In open canopies where light is comparitively homogenous, exposed leaves are primarily shaped by $T_{air_{max}}$ and $VPD$ stress, rather than solely by light [@mediavillaFoliarPlasticityRelated2019a].
+Sun leaves in the exposed canopy have traits that help avoid heat and water stress than shade leaves, for instance, by being smaller, hairier, with higher vein density [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006; @zwienieckiHydraulicLimitationsImposed200;@mathurPhotosyntheticEfficiencySun2018a], and steeper leaf-angle [@niinemetsAdjustmentFoliageStructure1998, *REF*]. These traits [see Table 1] collectively aid heat dissapation and regulate $T_{leaf}$-photosynthetic balance. Whereas, shade leaves have traits that maximize light capture in the diffused-light environment with sunflecks, for example lower LMA, but are more likely to get overheated than sun leaves due to greater thermal capacitance [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. In open canopies where light is comparitively homogenous, exposed leaves are primarily shaped by $T_{air_{max}}$ and $VPD$ stress, rather than solely by light [@mediavillaFoliarPlasticityRelated2019a].
 
-#### Biochemical traits
+#### Biochemical and elemental traits, and isoprenes
 
-Biochemical protection against foliage light and heat damage also increases with irradiance, and thus tends to be higher in the upper canopy than in the understory. 
+Biochemical protection against foliage light and heat damage also increases with irradiance, and thus tends to be higher in the upper canopy than in the understory [Table 1]. 
 Caratenoids and xanthophyll cycle pigments--violaxanthin, antheraxanthin and zeaxanthin [$VAZ$]--can play a role in antioxidant scavenging and converting excess excitation energy into heat to reduce photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. This is also important for leaf acclimation to higher temperature if high temperature impairs the photochemical energy dissipation pathway [@TemperaturedependentAdjustmentThermal1996].
 
 Elemental traits, such as $N_{area}$ and $P_{area}$, contribute to activities of high leaf metabolism, including respiration [@meirLeafRespirationTwo2001;@weerasingheCanopyPositionAffects2014] and photosynthetic processes in sun leaves [Table 1; @scartazzaInvestigatingEuropeanBeech2016a;@niinemetsWithincanopyVariationRate2004;@weerasingheCanopyPositionAffects2014]. Evidence also shows that within canopy leaf nitrogen distribution is regulated to prevent photoinhibition in shade leaves during sunlecks, and direct light for sun leaves [@kitaoCanopyNitrogenDistribution2018]. Hence, although we would expect elemental traits to influence vertical foliar thermal sensitivity, this remains unclear as @zhuPlasticityPhotosyntheticHeat2018 and @osullivanThermalLimitsLeaf2017 observed no relation between foliar thermal tolerance and total foliar concentrations of N and P.  Further, higher heat tolerance in exposed canopies is facilitated by isoprenes in species capable of emitting isoprenes, providing these species with a selective advantage in a warming world [*REF*].
@@ -286,7 +286,7 @@ Elemental traits, such as $N_{area}$ and $P_{area}$, contribute to activities of
 
 ##### *Leaf lifespan*  
 
-Leaf age affects vulnerability to heat stress independent of light environment [e.g. Marias et al. 2017], and has a strong effect on metabolism [@kikuzawaSynthesisRelationshipsLeaf2006], including photosynthesis and respiration, and their temperature sensitivities [@zhouLeafageEffectsTemperature2015; @niinemetsLeafAgeDependent2016]. Sun leaves have shorter lifespans than shade leaves, and thus upper canopy leaves are on average younger than subcanopy leaves, therefore they operate closer to their photosynthetic optimum. However, because leaf turnover rates of sun leaves in the upper canopy are faster than in the subcanopy, damage does not really accumulate [@millerOnlySunlitLeaves2021]. The effect of leaf age on heat tolerance once leaves are fully expanded and mature, is that heat tolerance decreases with increasing leaf age [@zhouLeafageEffectsTemperature2015; REFS], along with photosynthesis and $gs$ [@zhouLeafageEffectsTemperature2015; @niinemetsLeafAgeDependent2016]. In evergreen species, temperature responses of photosynthesis and temperature sensitivity of respiration ($Q_{10}$) have also been observed to be greater in younger than older leaves [@zhouLeafageEffectsTemperature2015]. Additionally, because older leaves reach maximum $T_{leaf}$ faster than younger leaves and can occupy a large part of the canopy, this would affect vertical gradient of thermal sensitivity [@zhouLeafageEffectsTemperature2015].
+Leaf age affects vulnerability to heat stress independent of light environment [e.g. Marias et al. 2017], and has a strong effect on metabolism [@kikuzawaSynthesisRelationshipsLeaf2006], including photosynthesis and respiration, and their temperature sensitivities [@zhouLeafageEffectsTemperature2015; @niinemetsLeafAgeDependent2016]. Sun leaves have shorter lifespans than shade leaves, and thus upper canopy leaves are on average younger than subcanopy leaves, therefore they operate closer to their photosynthetic optimum. However, because leaf turnover rates of sun leaves in the upper canopy are faster than in the subcanopy, damage does not really accumulate [@millerOnlySunlitLeaves2021]. The effect of leaf age on heat tolerance once leaves are fully expanded and mature, is that heat tolerance decreases with increasing leaf age [@zhouLeafageEffectsTemperature2015; REFS], along with photosynthesis and $gs$ and with a few expections between species [see @niinemetsLeafAgeDependent2016]. In evergreen species, temperature responses of photosynthesis and temperature sensitivity of respiration ($Q_{10}$) have also been observed to be greater in younger than older leaves [@zhouLeafageEffectsTemperature2015]. Additionally, because older leaves reach maximum $T_{leaf}$ sooner than younger leaves and can occupy a large part of the canopy, this would affect vertical gradient of thermal sensitivity [@zhouLeafageEffectsTemperature2015] **this needs some confirming by co-authors**.
 
 ### Interspecific variation 
 
@@ -294,7 +294,7 @@ Generally, the pattern of fundamental trait adaptation to light gradients is acr
 
 ##### *Deciduousness*
 
-Seasonal leaf-loss or -gain can alter biophysical and $T_{leaf}$ gradient in the forest [@rey-sanchez_spatial_2016]. Deciduousness in tropical forests is an adaptation to conserve water that is more common is dry than wet tropical forests. Within tropical species, the fraction of deciduous trees tends to increase across tree size classes, with understory species typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000]. In temperate deciduous forests, leaf-emergence is delayed with height-ontogeny, with understory species leafing-out earlier than canopy trees [@vitasseEarlierLeafoutRather2014; @seiwaChangesLeafPhenology1999]. 
+Seasonal leaf-loss or -gain can alter biophysical and $T_{leaf}$ gradient in the forest [@rey-sanchez_spatial_2016]. Deciduousness in tropical forests is an adaptation to conserve water that is more common is dry than wet tropical forests. Within tropical species, the fraction of deciduous trees tends to increase across tree size classes, with understory species typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c]. In temperate deciduous forests, leaf-emergence is delayed with height-ontogeny, with understory species leafing-out earlier than canopy trees [@vitasseEarlierLeafoutRather2014; @seiwaChangesLeafPhenology1999]. 
 
 ## Leaf metabolism and thermal responses
 
@@ -314,43 +314,44 @@ nocite: |
 
 ### Stomatal conductance
 
-Maximum $gs$ increases with light environment, and is thus higher in the sun exposed upper canopy than in subcanopy or understory leaves. However, because of the high evaporative demand and irradiance experienced by sun leaves,  mid-day stomatal depression is prevalent in sun leaves but not in shade leaves.  $T_{leaf}$ of sun leaves thus further increases due to the lack of transpirational cooling [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b; @kosugiSeasonalFluctuationsTemperature2006]. Higher maximum temperatures influences leaf thermal sensitivity tolerance [Perez and Feeley, 2018], but exact mechanisms remain unclear. $T_{opt}$ of $gs$  did not differ significantly between sun and shade leaves in three tropical tree species [Slot et al. 2019], but sun leaves show a stronger decrease in gs to rising temperature than shade leaves (Hernandez et al. 2020; Carter et al. 2021 ). 
+Maximum $gs$ increases with light environment, and is thus higher in the sun exposed upper canopy than in subcanopy or understory leaves [Table 2]. However, because of the high $VPD$ and irradiance experienced by sun leaves,  mid-day stomatal depression is prevalent in sun leaves but not in shade leaves.  $T_{leaf}$ of sun leaves thus further increases due to the lack of transpirational cooling [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. Higher maximum temperatures influences leaf thermal sensitivity tolerance [@perezPhotosyntheticHeatTolerances2020], but exact mechanisms remain unclear. Additionally, $T_{opt}$ of $gs$  did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019a], but sun leaves show a stronger decrease in $gs$ to rising temperature than shade leaves [@hernandezSimilarTemperatureDependence2020; Carter et al. 2021]. 
 
 ### Photosynthesis
 
 **Photosynthetic capacity is generally higher in exposed canopy positions-- a fact that is both theoretically expected and observed in numerous field studies (Table 2; Niinemets 2007 ; Kenzo et al. 2015 ; Slot et al. 2019; Chen et al. 2020).**
-This is primarily driven by the greater light available to sun-leaves that have traits [Table 1; Table 2] allowing greater photosynthetic rates at high light under sufficient nutrient and water conditions. Photosynthesis increases with irradiance, and saturates at quantum flux density of 400 $m^{-2}$ $s^{-1}$ to 700nm $m^{-2}$ $s^{-1}$. Light saturation levels differ between leaves and whole canopies with leaves saturating at lower light level than canopies; while a certain amount of light saturates the photosynthetic capacity of the leaf, increasing the amount of light in the canopy may increase photosynthesis in the shaded part of the canopy.
+This is primarily driven by the greater light available to sun-leaves, that also have traits [Table 1; Table 2] allowing greater photosynthetic rates at high light under sufficient nutrient and water conditions. Photosynthesis increases with irradiance, and saturates at quantum flux density of 400 $m^{-2}$ $s^{-1}$ to 700nm $m^{-2}$ $s^{-1}$. Light saturation levels differ between leaves and whole canopies with leaves saturating at lower light level than canopies; while a certain amount of light saturates the photosynthetic capacity of the leaf, increasing the amount of light in the canopy may increase photosynthesis in the shaded part of the canopy.
 
 Temperature can affect photosynthesis via direct and indirect pathways--directly, by altering photosynthetic enzyme activity and electron transport chain, and indirectly through increased $VPD$ causing stomatal closure [@lloydEffectsRisingTemperatures2008]. Photosynthesis has a peaked response to temperature, with the peak commonly found to correspond to the prevalent ambient growing season conditions [Tan et al. 2017; @slotSituTemperatureResponse2017]. Beyond the optimum, photosynthesis decreases as a result of stomatal closure (e.g. @slotSituTemperatureResponse2017; Smith et al. 2020 [temperate/boreal refs needed), and eventually due to biochemical constraints (@kumarathungeAcclimationAdaptationComponents2019a; Sage & Kubien 2007; Varhammer et al. 2015). Irresversible damage to photosystem II, leading to leaf necrosis and eventually leaf death occurs at $T_{leaf}$ of $40-60^{\circ}C$
 [Baker 2008; @feeley_thermal_2020].  
 
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
-Based on consistent positive relationships between growth temperature and $T_{opt}$ across sites and seasons (e.g. Tan et al. 2017; Kumarathunge et al. 2019), one might expect sun leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5) in Campbell and Norman 1998; *revisit this!*; @niinemetsShapeLeafPhotosynthetic1999; @niinemetsPhotosyntheticAcclimationSimultaneous2004]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the optimum temperature for sun leaves tended to be moderatly, but not significantly higher than that of shade leaves [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of the RuBP carboxylation  ($V_{max}$) and regeneration rates ($J_{max}$) didnot differ systematically between tropical sun- and shade-leaves [@hernandezSimilarTemperatureDependence2020], and along vertical gradients of tropical and temperate trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021;@mau_temperate_2018]. 
+Based on consistent positive relationships between growth temperature and $T_{opt}$ across sites and seasons (e.g. Tan et al. 2017; Kumarathunge et al. 2019), one might expect sun leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5) in Campbell and Norman 1998; *revisit this!*; @niinemetsShapeLeafPhotosynthetic1999; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the $T_{opt}$ for sun leaves tended to be moderatly, but not significantly higher than that of shade leaves [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of the RuBP carboxylation  ($V_{max}$) and regeneration rates ($J_{max}$) didnot differ systematically between tropical sun and shade leaves [@hernandezSimilarTemperatureDependence2020], and along vertical gradients of tropical and temperate trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021;@mau_temperate_2018]. 
 
-@hernandezSimilarTemperatureDependence2020 speculated that the lack of sun-shade differences in $T_{opt}$ may reflect acclimation to similar temperatures of peak photosynthesis. Sun leaves experience higher temperatures, but maximum temperatures are associated with conditions of mid-day stomatal depression, and acclimation to optimize photosynthesis at these temperatures would not be advantageous. Shade leaves that do not experience mid-day depression continue to fix carbon even when afternoon air temperatures peak. Evaluating this requires diurnal monitoring of net photosynthesis through the canopy.
+@hernandezSimilarTemperatureDependence2020 speculated that the lack of sun-shade differences in $T_{opt}$ may reflect acclimation to similar temperatures of peak photosynthesis. Sun leaves experience higher temperatures, but maximum temperatures are associated with conditions of mid-day stomatal depression, and acclimation to optimize photosynthesis at these temperatures would not be advantageous. Shade leaves that do not experience mid-day depression continue to fix carbon even when afternoon air temperatures peak [@millerOnlySunlitLeaves2021]. Evaluating this requires diurnal monitoring of net photosynthesis through the canopy.
  
 **Leaf photosynthetic thermal tolerance (Tcrit/ T50)**
 
-$T_{crit}$ is the temperature at which efficiency of photosystem II starts to decrease, based on chlorphyll a flourescence; and $T_{50}$ represents temperature at which the efficiency of photosystem II had decreased by 50% [Slot et al. 2020]. 
+$T_{crit}$ is the temperature at which efficiency of photosystem II starts to decrease, based on chlorphyll a flourescence; and $T_{50}$ represents temperature at which the efficiency of photosystem II had decreased by 50% [@slotLeafHeatTolerance2020]. 
 
 **Thermal tolerance (e.g., $T_{50}$) varies with exposure, but there are no studies isolating effect of height.**
 
-In 1994, Knapp et al. showed that $T_{50}$ measured on chinquapin oak (*Quercus muehlenbergii*) growing in xeric, sunnier conditions was higher by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) growing in shaded mesic conditions. In both species $T_{50}$ also tracked increased from June to August. No studies have compared within species sun and shade leaves other than @slotPhotosyntheticHeatTolerance2019a who found that $T_{50}$ was slightly lower for shade than sun leaves for two of three tree species measured in Panama.
+In 1994, Knapp et al. showed that $T_{50}$ measured on chinquapin oak (*Quercus muehlenbergii*) growing in xeric, sunnier conditions was higher by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) growing in shaded mesic conditions. In both species $T_{50}$ also tracked increased from June to August. Within species, @slotPhotosyntheticHeatTolerance2019a found that $T_{50}$ was slightly lower for shade than sun leaves for two of three tree species measured in Panama.
 
-Leaf thermal tolerances are more closely adapted to microenvironment than macroclimate [@feeley_thermal_2020; @slotPhotosyntheticPlasticityTropical2021]. Particularly, in an Australian arid region, *Acacia papyrocarpa* (Benth.) trees showed higher composite climate stress and greater $T_{50}$ in lower north-facing canopy than other canopy positions, correlating with low wind-speed, greater $T_{air}$ and longer leaf thermal time constants [@curtis_intracanopy_2019]. However, more research is required to fully understand the relationship between leaf thermal tolerance and microenvironments.
+Leaf thermal tolerances are more closely adapted to microenvironment than macroclimate [@feeley_thermal_2020; @slotPhotosyntheticPlasticityTropical2021]. Particularly, in an Australian arid region, *Acacia papyrocarpa* (Benth.) trees showed higher composite climate stress and greater $T_{50}$ in lower north-facing canopy than other canopy positions, correlating with low wind-speed, greater $T_{air}$ and longer leaf thermal time constants [@curtis_intracanopy_2019]. However, more research is required to fully understand the relationship between leaf thermal tolerance and microenvironments. 
+
+*Further, if we take geographic gradients as a reliable proxy, we'd expect temperature sensitivities to reflect the environment to which the trees are adapted/ acclimatized.* Global $T_{50s}$ across latitude and climate range from ~45-50$^\circ$C (O' sullivan et al. 2017), where $T_{50}$ and $T_{crit}$ decrease with elevation among tropical forests and across latitudes [@feeley_thermal_2020;  @slotLeafHeatTolerance2020; @osullivanThermalLimitsLeaf2017]. 
+
 
 *We're not aware of any other studies on this."we may want to argue that we have no *a priori* reasons to expect thermal tolerance to scale with height per se (or do we?). I think it makes sense to expect variation with light exposure because of the associated differences in temperature you can expect the leaves to be exposed to, but height itself should not affect heat tolerance other than through associated traits perhaps"--Martijn Slot*
 
-Across species, $T_{50}$ is explained less by phylogeny [Slot et al. 2021; Perez and Feeley, 2020a] and more by leaf traits. $T_{crit}$ was found to be greater among tropical species with large leaves that had slow heating and cooling time [higher thermal time constant] whereas $T_{50}$ was greater among species' leaves with greater LMA (greater construction costs), compared to species with low LMA [@slotLeafHeatTolerance2020]. @perezPhotosyntheticHeatTolerances2020 also found that, across species sun leaves that experienced higher maximum temperatures had higher photosynthetic heat tolerance. 
+Across species, $T_{50}$ is explained less by phylogeny [Slot et al. 2021; Perez and Feeley, 2020a] and more by leaf traits. $T_{crit}$ was found to be greater among tropical species with large leaves that had slow heating and cooling time [higher thermal time constant] whereas $T_{50}$ was greater among species' leaves with greater LMA (greater construction costs), compared to species with low LMA [@slotLeafHeatTolerance2020]. @perezPhotosyntheticHeatTolerances2020 also found that, across species sun leaves that experienced higher maximum temperatures had higher photosynthetic heat tolerance. Therefore, we would expect, at vertical gradient, leaves exposed to greater heat stress to have higher heat tolerance but further research is required to confirm this.
 
-*If we take geographic gradients as a reliable proxy, we'd expect temperature sensitivities to reflect the environment to which the trees are adapted/ acclimatized.* Global $T_{50s}$ across latitude and climate range from ~45-50$^\circ$C (O' sullivan et al. 2017), where $T_{50}$ and $T_{crit}$ decrease with elevation among tropical forests and across latitudes [@feeley_thermal_2020;  @slotLeafHeatTolerance2020; @osullivanThermalLimitsLeaf2017]. 
- 
 ### Respiration
 
 **Similar to photosynthesis, respiration tends to be higher in canopy sun-leaves (Chen et al. 2020), but temperature sensitivity of respiration--$Q_{10}$--shows no definite trend along the vertical gradient [@bolstad_foliar_1999; Weerasinghe et al.2014].**
 
-A few studies have found $Q_{10}$ to be greater in upper-canopy leaves than in shaded lower-canopy leaves, with significant differences in values between species [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996], whereas @griffinCanopyPositionAffects2002 found that in Populas deltoides, lower canopy leaf respiration was more sensitive to changes in $T_{air}$ than upper canopy. Other studies have observed no difference in $Q_{10}$ within species vertical profiles and in seedling sun vs. shade leaves [@weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007; @zaragoza-castellsClimatedependentVariationsLeaf2008]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). 
-@xuSeasonalVariationTemperature2006 found that the canopy-position effect gradient in respiration rates was much greater for Quercus rubra trees in mesic than in xeric sites, but the temperature sensitivity of respiration did not differ between canopy positions.
+A few studies have found $Q_{10}$ to be greater in upper-canopy leaves than in shaded lower-canopy leaves [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996], whereas @griffinCanopyPositionAffects2002 found that in Populas deltoides, lower canopy leaf respiration was more sensitive to changes in $T_{air}$ than upper canopy. Other studies have observed no difference in $Q_{10}$ within species vertical profiles and in seedling sun vs. shade leaves [@weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007; @zaragoza-castellsClimatedependentVariationsLeaf2008]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). 
+@xuSeasonalVariationTemperature2006 found that the canopy-position effect gradient in respiration rates was much greater for Quercus rubra trees in mesic than in xeric sites, but $Q_{10}$ did not differ between canopy positions.
 
  
 ### VOC production
@@ -368,7 +369,7 @@ Vertical gradients in the biophysical environment shape which plant strategies, 
 ### Demography
 
 **Vertical gradients affect tree recruitment, growth and survival, and how these respond to climatic variation.**
-More interesting in this context is how these shape differences in the climatic sensitivity of growth and mortality. There are numerous demographic differences between understory and canopy trees, which have been linked to both the physical environment and plant traits (e.g., REFS), *and we will not review those here.* *(although maybe we should put one paragraph?)* Demographic differences between canopy trees and understory trees can also influence their their ability to tolerate multiple stressors. Tolerance of more than one biological and biophyical stressors can increase with tree height and light, enabled by non-structural carbon reserve [NSC], with smaller shaded trees being more sensitive due to lower NSC [@niinemetsResponsesForestTrees2010a]. However, growth also declines as trees age. This is partly because autotrophic respiration increases with age that declines NPP, whereas due to increase in morphological and anatomical complexity, GPP also increases [@IncreasingRespiratoryCosts]. Vertical biophysical conditions are bound to influence growth and whole tree functioning.
+More interesting in this context is how these shape differences in the climatic sensitivity of growth and mortality. There are numerous demographic differences between understory and canopy trees, which have been linked to both the physical environment and plant traits (e.g., REFS), *and we will not review those here.* *(although maybe we should put one paragraph?)* Demographic differences between canopy trees and understory trees can also influence their their ability to tolerate multiple stressors.Within species, tolerance of more than one biological and biophyical stressors can increase with tree height and light, enabled by non-structural carbon reserve [NSC], with smaller shaded trees being more sensitive due to lower NSC [@niinemetsResponsesForestTrees2010a]. However, growth also declines as trees age. This is partly because autotrophic respiration increases with age that declines NPP, whereas due to increase in morphological and anatomical complexity, GPP also increases [@IncreasingRespiratoryCosts]. Vertical biophysical conditions are bound to influence growth and whole tree functioning.
 
 Greater $VPD$ and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests, as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Whereas greater $RH$ can do the opposite, stifling evapotranspiration and thereby increasing $T_{leaf}$ [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979]. Altered precipitation regimes can cause droughts, that are more  detrimental to larger trees than small trees, because limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [@bennettLargerTreesSuffer2015; @mcgregor_tree_nodate; @bartholomewSmallTropicalForest2020]. However, given adequate moisture to sustain high $g_s$, canopy leaves exposed to more wind and lower humidity should be more effective at cooling when $T_{air}$ exceeds physiological optima (Fig. `r fig_leaf_T`).
 
